Update email address

--- a/_posts/2014-04-12-tools.md
+++ b/_posts/2014-04-12-tools.md
@@ -2,6 +2,7 @@
 layout: tutorial
 title: 开发过程中常用的工具
 category: tutorial
+published: false
 ---
 
 在开始之前，我们先列一下平常会用到的网站和工具以及一些名词：
@@ -39,7 +40,7 @@ category: tutorial
 
 ## 任务 ## {#task}
 
-1. 注册Gmai账号, 并发邮件(任意内容)到lendage@gmail.com
+1. 注册Gmai账号, 并发邮件(任意内容)到me[AT]lenage.com
 1. 使用注册的Gmail注册Github账号
 2. 下载并安装Sublime Text, 并作简单的配置
 3. 下载安装screenhero, 用之前注册的Gmail邮箱注册screenhero账号
